add the usefull component, material angular library and enabled http request
